Analizador/VisualBasic/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONSOLE
    DATETIME
    MAIN
    NOW
    READKEY
    READLINE
    STRING
    SUB
    WRITELINE

Grammar

Rule 0     S' -> module
Rule 1     module -> program
Rule 2     program -> constDecl varDecl procDecl statement
Rule 3     args -> ARGS
Rule 4     imports -> IMPORTS ID
Rule 5     constDecl -> DIM constAssignmentList
Rule 6     constDecl -> DIM ID IGUAL ID
Rule 7     constDecl -> DIM ID AS ID IGUAL ID
Rule 8     constDecl -> empty
Rule 9     constAssignmentList -> ID IGUAL NUMERO
Rule 10    constAssignmentList -> constAssignmentList ID IGUAL NUMERO
Rule 11    varDecl -> DIM identList
Rule 12    varDecl -> empty
Rule 13    identList -> ID
Rule 14    identList -> identList ID
Rule 15    procDecl -> empty
Rule 16    statement -> ID UPDATE expression
Rule 17    statement -> ID
Rule 18    statement -> BEGIN statementList END
Rule 19    statement -> condition
Rule 20    statement -> IMPORTS ID
Rule 21    statement -> empty
Rule 22    statementList -> statement
Rule 23    statementList -> statementList statement
Rule 24    condition -> expression
Rule 25    condition -> expression relation expression
Rule 26    relation -> IGUAL
Rule 27    relation -> NOIGUAL
Rule 28    relation -> MENORQ
Rule 29    relation -> MAYORQ
Rule 30    relation -> TRUE
Rule 31    relation -> FALSE
Rule 32    expression -> term
Rule 33    expression -> multiplyingOperator term
Rule 34    expression -> addingOperator term
Rule 35    expression -> expression addingOperator term expression
Rule 36    expression -> LLIZQ ID LLDER
Rule 37    expression -> VBCRLF
Rule 38    expression -> MODULE PROGRAM
Rule 39    expression -> END MODULE
Rule 40    expression -> DIM ID AS BOOLEAN IGUAL term
Rule 41    expression -> ID IGUAL expression
Rule 42    addingOperator -> SUMA
Rule 43    addingOperator -> RESTA
Rule 44    addingOperator -> MOD
Rule 45    term -> factor
Rule 46    term -> term multiplyingOperator factor
Rule 47    term -> PIZQ NUMERO MAYORQ NUMERO PDER
Rule 48    term -> BOOLEAN IGUAL term
Rule 49    term -> term addingOperator factor
Rule 50    multiplyingOperator -> MULTI
Rule 51    multiplyingOperator -> DIV
Rule 52    factor -> ID
Rule 53    factor -> NUMERO
Rule 54    factor -> PIZQ expression PDER
Rule 55    boolean -> BOOLEAN
Rule 56    empty -> <empty>

Terminals, with rules where they appear

ARGS                 : 3
AS                   : 7 40
BEGIN                : 18
BOOLEAN              : 40 48 55
CONSOLE              : 
DATETIME             : 
DIM                  : 5 6 7 11 40
DIV                  : 51
END                  : 18 39
FALSE                : 31
ID                   : 4 6 6 7 7 7 9 10 13 14 16 17 20 36 40 41 52
IGUAL                : 6 7 9 10 26 40 41 48
IMPORTS              : 4 20
LLDER                : 36
LLIZQ                : 36
MAIN                 : 
MAYORQ               : 29 47
MENORQ               : 28
MOD                  : 44
MODULE               : 38 39
MULTI                : 50
NOIGUAL              : 27
NOW                  : 
NUMERO               : 9 10 47 47 53
PDER                 : 47 54
PIZQ                 : 47 54
PROGRAM              : 38
READKEY              : 
READLINE             : 
RESTA                : 43
STRING               : 
SUB                  : 
SUMA                 : 42
TRUE                 : 30
UPDATE               : 16
VBCRLF               : 37
WRITELINE            : 
error                : 

Nonterminals, with rules where they appear

addingOperator       : 34 35 49
args                 : 
boolean              : 
condition            : 19
constAssignmentList  : 5 10
constDecl            : 2
empty                : 8 12 15 21
expression           : 16 24 25 25 35 35 41 54
factor               : 45 46 49
identList            : 11 14
imports              : 
module               : 0
multiplyingOperator  : 33 46
procDecl             : 2
program              : 1
relation             : 25
statement            : 2 22 23
statementList        : 18 23
term                 : 32 33 34 35 40 46 48 49
varDecl              : 2

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . program
    (2) program -> . constDecl varDecl procDecl statement
    (5) constDecl -> . DIM constAssignmentList
    (6) constDecl -> . DIM ID IGUAL ID
    (7) constDecl -> . DIM ID AS ID IGUAL ID
    (8) constDecl -> . empty
    (56) empty -> .

  ! shift/reduce conflict for DIM resolved as shift
    DIM             shift and go to state 4
    ID              reduce using rule 56 (empty -> .)
    BEGIN           reduce using rule 56 (empty -> .)
    IMPORTS         reduce using rule 56 (empty -> .)
    LLIZQ           reduce using rule 56 (empty -> .)
    VBCRLF          reduce using rule 56 (empty -> .)
    MODULE          reduce using rule 56 (empty -> .)
    END             reduce using rule 56 (empty -> .)
    PIZQ            reduce using rule 56 (empty -> .)
    BOOLEAN         reduce using rule 56 (empty -> .)
    MULTI           reduce using rule 56 (empty -> .)
    DIV             reduce using rule 56 (empty -> .)
    SUMA            reduce using rule 56 (empty -> .)
    RESTA           reduce using rule 56 (empty -> .)
    MOD             reduce using rule 56 (empty -> .)
    NUMERO          reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)

  ! DIM             [ reduce using rule 56 (empty -> .) ]

    module                         shift and go to state 1
    program                        shift and go to state 2
    constDecl                      shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> module .



state 2

    (1) module -> program .

    $end            reduce using rule 1 (module -> program .)


state 3

    (2) program -> constDecl . varDecl procDecl statement
    (11) varDecl -> . DIM identList
    (12) varDecl -> . empty
    (56) empty -> .

  ! shift/reduce conflict for DIM resolved as shift
    DIM             shift and go to state 7
    ID              reduce using rule 56 (empty -> .)
    BEGIN           reduce using rule 56 (empty -> .)
    IMPORTS         reduce using rule 56 (empty -> .)
    LLIZQ           reduce using rule 56 (empty -> .)
    VBCRLF          reduce using rule 56 (empty -> .)
    MODULE          reduce using rule 56 (empty -> .)
    END             reduce using rule 56 (empty -> .)
    PIZQ            reduce using rule 56 (empty -> .)
    BOOLEAN         reduce using rule 56 (empty -> .)
    MULTI           reduce using rule 56 (empty -> .)
    DIV             reduce using rule 56 (empty -> .)
    SUMA            reduce using rule 56 (empty -> .)
    RESTA           reduce using rule 56 (empty -> .)
    MOD             reduce using rule 56 (empty -> .)
    NUMERO          reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)

  ! DIM             [ reduce using rule 56 (empty -> .) ]

    varDecl                        shift and go to state 6
    empty                          shift and go to state 8

state 4

    (5) constDecl -> DIM . constAssignmentList
    (6) constDecl -> DIM . ID IGUAL ID
    (7) constDecl -> DIM . ID AS ID IGUAL ID
    (9) constAssignmentList -> . ID IGUAL NUMERO
    (10) constAssignmentList -> . constAssignmentList ID IGUAL NUMERO

    ID              shift and go to state 10

    constAssignmentList            shift and go to state 9

state 5

    (8) constDecl -> empty .

    DIM             reduce using rule 8 (constDecl -> empty .)
    ID              reduce using rule 8 (constDecl -> empty .)
    BEGIN           reduce using rule 8 (constDecl -> empty .)
    IMPORTS         reduce using rule 8 (constDecl -> empty .)
    LLIZQ           reduce using rule 8 (constDecl -> empty .)
    VBCRLF          reduce using rule 8 (constDecl -> empty .)
    MODULE          reduce using rule 8 (constDecl -> empty .)
    END             reduce using rule 8 (constDecl -> empty .)
    PIZQ            reduce using rule 8 (constDecl -> empty .)
    BOOLEAN         reduce using rule 8 (constDecl -> empty .)
    MULTI           reduce using rule 8 (constDecl -> empty .)
    DIV             reduce using rule 8 (constDecl -> empty .)
    SUMA            reduce using rule 8 (constDecl -> empty .)
    RESTA           reduce using rule 8 (constDecl -> empty .)
    MOD             reduce using rule 8 (constDecl -> empty .)
    NUMERO          reduce using rule 8 (constDecl -> empty .)
    $end            reduce using rule 8 (constDecl -> empty .)


state 6

    (2) program -> constDecl varDecl . procDecl statement
    (15) procDecl -> . empty
    (56) empty -> .

    ID              reduce using rule 56 (empty -> .)
    BEGIN           reduce using rule 56 (empty -> .)
    IMPORTS         reduce using rule 56 (empty -> .)
    LLIZQ           reduce using rule 56 (empty -> .)
    VBCRLF          reduce using rule 56 (empty -> .)
    MODULE          reduce using rule 56 (empty -> .)
    END             reduce using rule 56 (empty -> .)
    DIM             reduce using rule 56 (empty -> .)
    PIZQ            reduce using rule 56 (empty -> .)
    BOOLEAN         reduce using rule 56 (empty -> .)
    MULTI           reduce using rule 56 (empty -> .)
    DIV             reduce using rule 56 (empty -> .)
    SUMA            reduce using rule 56 (empty -> .)
    RESTA           reduce using rule 56 (empty -> .)
    MOD             reduce using rule 56 (empty -> .)
    NUMERO          reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)

    procDecl                       shift and go to state 11
    empty                          shift and go to state 12

state 7

    (11) varDecl -> DIM . identList
    (13) identList -> . ID
    (14) identList -> . identList ID

    ID              shift and go to state 14

    identList                      shift and go to state 13

state 8

    (12) varDecl -> empty .

    ID              reduce using rule 12 (varDecl -> empty .)
    BEGIN           reduce using rule 12 (varDecl -> empty .)
    IMPORTS         reduce using rule 12 (varDecl -> empty .)
    LLIZQ           reduce using rule 12 (varDecl -> empty .)
    VBCRLF          reduce using rule 12 (varDecl -> empty .)
    MODULE          reduce using rule 12 (varDecl -> empty .)
    END             reduce using rule 12 (varDecl -> empty .)
    DIM             reduce using rule 12 (varDecl -> empty .)
    PIZQ            reduce using rule 12 (varDecl -> empty .)
    BOOLEAN         reduce using rule 12 (varDecl -> empty .)
    MULTI           reduce using rule 12 (varDecl -> empty .)
    DIV             reduce using rule 12 (varDecl -> empty .)
    SUMA            reduce using rule 12 (varDecl -> empty .)
    RESTA           reduce using rule 12 (varDecl -> empty .)
    MOD             reduce using rule 12 (varDecl -> empty .)
    NUMERO          reduce using rule 12 (varDecl -> empty .)
    $end            reduce using rule 12 (varDecl -> empty .)


state 9

    (5) constDecl -> DIM constAssignmentList .
    (10) constAssignmentList -> constAssignmentList . ID IGUAL NUMERO

  ! shift/reduce conflict for ID resolved as shift
    DIM             reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    BEGIN           reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    IMPORTS         reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    LLIZQ           reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    VBCRLF          reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    MODULE          reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    END             reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    PIZQ            reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    BOOLEAN         reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    MULTI           reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    DIV             reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    SUMA            reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    RESTA           reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    MOD             reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    NUMERO          reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    $end            reduce using rule 5 (constDecl -> DIM constAssignmentList .)
    ID              shift and go to state 15

  ! ID              [ reduce using rule 5 (constDecl -> DIM constAssignmentList .) ]


state 10

    (6) constDecl -> DIM ID . IGUAL ID
    (7) constDecl -> DIM ID . AS ID IGUAL ID
    (9) constAssignmentList -> ID . IGUAL NUMERO

    IGUAL           shift and go to state 16
    AS              shift and go to state 17


state 11

    (2) program -> constDecl varDecl procDecl . statement
    (16) statement -> . ID UPDATE expression
    (17) statement -> . ID
    (18) statement -> . BEGIN statementList END
    (19) statement -> . condition
    (20) statement -> . IMPORTS ID
    (21) statement -> . empty
    (24) condition -> . expression
    (25) condition -> . expression relation expression
    (56) empty -> .
    (32) expression -> . term
    (33) expression -> . multiplyingOperator term
    (34) expression -> . addingOperator term
    (35) expression -> . expression addingOperator term expression
    (36) expression -> . LLIZQ ID LLDER
    (37) expression -> . VBCRLF
    (38) expression -> . MODULE PROGRAM
    (39) expression -> . END MODULE
    (40) expression -> . DIM ID AS BOOLEAN IGUAL term
    (41) expression -> . ID IGUAL expression
    (45) term -> . factor
    (46) term -> . term multiplyingOperator factor
    (47) term -> . PIZQ NUMERO MAYORQ NUMERO PDER
    (48) term -> . BOOLEAN IGUAL term
    (49) term -> . term addingOperator factor
    (50) multiplyingOperator -> . MULTI
    (51) multiplyingOperator -> . DIV
    (42) addingOperator -> . SUMA
    (43) addingOperator -> . RESTA
    (44) addingOperator -> . MOD
    (52) factor -> . ID
    (53) factor -> . NUMERO
    (54) factor -> . PIZQ expression PDER

    ID              shift and go to state 19
    BEGIN           shift and go to state 21
    IMPORTS         shift and go to state 24
    $end            reduce using rule 56 (empty -> .)
    LLIZQ           shift and go to state 29
    VBCRLF          shift and go to state 30
    MODULE          shift and go to state 31
    END             shift and go to state 22
    DIM             shift and go to state 32
    PIZQ            shift and go to state 35
    BOOLEAN         shift and go to state 33
    MULTI           shift and go to state 37
    DIV             shift and go to state 38
    SUMA            shift and go to state 39
    RESTA           shift and go to state 40
    MOD             shift and go to state 41
    NUMERO          shift and go to state 36

    statement                      shift and go to state 18
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    empty                          shift and go to state 25
    term                           shift and go to state 26
    multiplyingOperator            shift and go to state 27
    addingOperator                 shift and go to state 28
    factor                         shift and go to state 34

state 12

    (15) procDecl -> empty .

    ID              reduce using rule 15 (procDecl -> empty .)
    BEGIN           reduce using rule 15 (procDecl -> empty .)
    IMPORTS         reduce using rule 15 (procDecl -> empty .)
    LLIZQ           reduce using rule 15 (procDecl -> empty .)
    VBCRLF          reduce using rule 15 (procDecl -> empty .)
    MODULE          reduce using rule 15 (procDecl -> empty .)
    END             reduce using rule 15 (procDecl -> empty .)
    DIM             reduce using rule 15 (procDecl -> empty .)
    PIZQ            reduce using rule 15 (procDecl -> empty .)
    BOOLEAN         reduce using rule 15 (procDecl -> empty .)
    MULTI           reduce using rule 15 (procDecl -> empty .)
    DIV             reduce using rule 15 (procDecl -> empty .)
    SUMA            reduce using rule 15 (procDecl -> empty .)
    RESTA           reduce using rule 15 (procDecl -> empty .)
    MOD             reduce using rule 15 (procDecl -> empty .)
    NUMERO          reduce using rule 15 (procDecl -> empty .)
    $end            reduce using rule 15 (procDecl -> empty .)


state 13

    (11) varDecl -> DIM identList .
    (14) identList -> identList . ID

  ! shift/reduce conflict for ID resolved as shift
    BEGIN           reduce using rule 11 (varDecl -> DIM identList .)
    IMPORTS         reduce using rule 11 (varDecl -> DIM identList .)
    LLIZQ           reduce using rule 11 (varDecl -> DIM identList .)
    VBCRLF          reduce using rule 11 (varDecl -> DIM identList .)
    MODULE          reduce using rule 11 (varDecl -> DIM identList .)
    END             reduce using rule 11 (varDecl -> DIM identList .)
    DIM             reduce using rule 11 (varDecl -> DIM identList .)
    PIZQ            reduce using rule 11 (varDecl -> DIM identList .)
    BOOLEAN         reduce using rule 11 (varDecl -> DIM identList .)
    MULTI           reduce using rule 11 (varDecl -> DIM identList .)
    DIV             reduce using rule 11 (varDecl -> DIM identList .)
    SUMA            reduce using rule 11 (varDecl -> DIM identList .)
    RESTA           reduce using rule 11 (varDecl -> DIM identList .)
    MOD             reduce using rule 11 (varDecl -> DIM identList .)
    NUMERO          reduce using rule 11 (varDecl -> DIM identList .)
    $end            reduce using rule 11 (varDecl -> DIM identList .)
    ID              shift and go to state 42

  ! ID              [ reduce using rule 11 (varDecl -> DIM identList .) ]


state 14

    (13) identList -> ID .

    ID              reduce using rule 13 (identList -> ID .)
    BEGIN           reduce using rule 13 (identList -> ID .)
    IMPORTS         reduce using rule 13 (identList -> ID .)
    LLIZQ           reduce using rule 13 (identList -> ID .)
    VBCRLF          reduce using rule 13 (identList -> ID .)
    MODULE          reduce using rule 13 (identList -> ID .)
    END             reduce using rule 13 (identList -> ID .)
    DIM             reduce using rule 13 (identList -> ID .)
    PIZQ            reduce using rule 13 (identList -> ID .)
    BOOLEAN         reduce using rule 13 (identList -> ID .)
    MULTI           reduce using rule 13 (identList -> ID .)
    DIV             reduce using rule 13 (identList -> ID .)
    SUMA            reduce using rule 13 (identList -> ID .)
    RESTA           reduce using rule 13 (identList -> ID .)
    MOD             reduce using rule 13 (identList -> ID .)
    NUMERO          reduce using rule 13 (identList -> ID .)
    $end            reduce using rule 13 (identList -> ID .)


state 15

    (10) constAssignmentList -> constAssignmentList ID . IGUAL NUMERO

    IGUAL           shift and go to state 43


state 16

    (6) constDecl -> DIM ID IGUAL . ID
    (9) constAssignmentList -> ID IGUAL . NUMERO

    ID              shift and go to state 44
    NUMERO          shift and go to state 45


state 17

    (7) constDecl -> DIM ID AS . ID IGUAL ID

    ID              shift and go to state 46


state 18

    (2) program -> constDecl varDecl procDecl statement .

    $end            reduce using rule 2 (program -> constDecl varDecl procDecl statement .)


state 19

    (16) statement -> ID . UPDATE expression
    (17) statement -> ID .
    (41) expression -> ID . IGUAL expression
    (52) factor -> ID .

  ! reduce/reduce conflict for MULTI resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for DIV resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for SUMA resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for RESTA resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for MOD resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for $end resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for END resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for ID resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for BEGIN resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for IMPORTS resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for LLIZQ resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for VBCRLF resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for MODULE resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for DIM resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for PIZQ resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 17 (statement -> ID .)
  ! reduce/reduce conflict for NUMERO resolved using rule 17 (statement -> ID .)
    UPDATE          shift and go to state 47
    $end            reduce using rule 17 (statement -> ID .)
    END             reduce using rule 17 (statement -> ID .)
    ID              reduce using rule 17 (statement -> ID .)
    BEGIN           reduce using rule 17 (statement -> ID .)
    IMPORTS         reduce using rule 17 (statement -> ID .)
    LLIZQ           reduce using rule 17 (statement -> ID .)
    VBCRLF          reduce using rule 17 (statement -> ID .)
    MODULE          reduce using rule 17 (statement -> ID .)
    DIM             reduce using rule 17 (statement -> ID .)
    PIZQ            reduce using rule 17 (statement -> ID .)
    BOOLEAN         reduce using rule 17 (statement -> ID .)
    MULTI           reduce using rule 17 (statement -> ID .)
    DIV             reduce using rule 17 (statement -> ID .)
    SUMA            reduce using rule 17 (statement -> ID .)
    RESTA           reduce using rule 17 (statement -> ID .)
    MOD             reduce using rule 17 (statement -> ID .)
    NUMERO          reduce using rule 17 (statement -> ID .)
    IGUAL           shift and go to state 48
    NOIGUAL         reduce using rule 52 (factor -> ID .)
    MENORQ          reduce using rule 52 (factor -> ID .)
    MAYORQ          reduce using rule 52 (factor -> ID .)
    TRUE            reduce using rule 52 (factor -> ID .)
    FALSE           reduce using rule 52 (factor -> ID .)

  ! MULTI           [ reduce using rule 52 (factor -> ID .) ]
  ! DIV             [ reduce using rule 52 (factor -> ID .) ]
  ! SUMA            [ reduce using rule 52 (factor -> ID .) ]
  ! RESTA           [ reduce using rule 52 (factor -> ID .) ]
  ! MOD             [ reduce using rule 52 (factor -> ID .) ]
  ! IGUAL           [ reduce using rule 52 (factor -> ID .) ]
  ! $end            [ reduce using rule 52 (factor -> ID .) ]
  ! END             [ reduce using rule 52 (factor -> ID .) ]
  ! ID              [ reduce using rule 52 (factor -> ID .) ]
  ! BEGIN           [ reduce using rule 52 (factor -> ID .) ]
  ! IMPORTS         [ reduce using rule 52 (factor -> ID .) ]
  ! LLIZQ           [ reduce using rule 52 (factor -> ID .) ]
  ! VBCRLF          [ reduce using rule 52 (factor -> ID .) ]
  ! MODULE          [ reduce using rule 52 (factor -> ID .) ]
  ! DIM             [ reduce using rule 52 (factor -> ID .) ]
  ! PIZQ            [ reduce using rule 52 (factor -> ID .) ]
  ! BOOLEAN         [ reduce using rule 52 (factor -> ID .) ]
  ! NUMERO          [ reduce using rule 52 (factor -> ID .) ]


state 20

    (24) condition -> expression .
    (25) condition -> expression . relation expression
    (35) expression -> expression . addingOperator term expression
    (26) relation -> . IGUAL
    (27) relation -> . NOIGUAL
    (28) relation -> . MENORQ
    (29) relation -> . MAYORQ
    (30) relation -> . TRUE
    (31) relation -> . FALSE
    (42) addingOperator -> . SUMA
    (43) addingOperator -> . RESTA
    (44) addingOperator -> . MOD

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
    $end            reduce using rule 24 (condition -> expression .)
    END             reduce using rule 24 (condition -> expression .)
    ID              reduce using rule 24 (condition -> expression .)
    BEGIN           reduce using rule 24 (condition -> expression .)
    IMPORTS         reduce using rule 24 (condition -> expression .)
    LLIZQ           reduce using rule 24 (condition -> expression .)
    VBCRLF          reduce using rule 24 (condition -> expression .)
    MODULE          reduce using rule 24 (condition -> expression .)
    DIM             reduce using rule 24 (condition -> expression .)
    PIZQ            reduce using rule 24 (condition -> expression .)
    BOOLEAN         reduce using rule 24 (condition -> expression .)
    MULTI           reduce using rule 24 (condition -> expression .)
    DIV             reduce using rule 24 (condition -> expression .)
    NUMERO          reduce using rule 24 (condition -> expression .)
    IGUAL           shift and go to state 51
    NOIGUAL         shift and go to state 52
    MENORQ          shift and go to state 53
    MAYORQ          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    SUMA            shift and go to state 39
    RESTA           shift and go to state 40
    MOD             shift and go to state 41

  ! SUMA            [ reduce using rule 24 (condition -> expression .) ]
  ! RESTA           [ reduce using rule 24 (condition -> expression .) ]
  ! MOD             [ reduce using rule 24 (condition -> expression .) ]

    relation                       shift and go to state 49
    addingOperator                 shift and go to state 50

state 21
